[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "jupyterquiz"
author = "John M. Shea"
author-email = "jshea@ieee.org"
home-page = "https://github.com/jmshea/jupyterquiz"
classifiers = [ "License :: OSI Approved :: MIT License",]
description-file = "README.md"

