[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "JupyterQuiz"
authors = [
    {name = "John M. Shea", email = "jshea@ieee.org"}]
classifiers = [ "License :: OSI Approved :: MIT License",]
description = "Interactive quizzes for Jupyter and Jupyter Book"
readme  = "README.md"
dynamic = ["version"]

[tool.flit.module]
name = "jupyterquiz"

[project.urls]
home-page = "https://github.com/jmshea/jupyterquiz"
